# intelligent-conversational-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  main.py  pyproject.toml  yoyo.ini
app/: config.py
app/agents/: customer_support_agent.py  default_agent_configs.py  master_data_sub_agent.py  models.py  sentiment_analysis_agent.py
app/agents/tools/: customer_satisfaction.py  issues.py  master_data.py
app/decorators/: db_session.py
app/entities/: orm_mappers.py  orm_models.py  orm_session.py
app/repositories/: chat_repository.py  db_functions.py  issue_repository.py  order_repository.py
app/routers/: chat.py  health.py  models.py  sse.py  voice.py
db-migrations/: 0001_initial-schema.sql  0002_populate_schema.sql  0003_sample_conversations.sql
frontend/: streamlit_frontend.py
frontend/helpers/: chat_history.py  css_styles.py  effects.py  sse.py  voice.py
tests/support/repositories/: base_repository_test.py
tests/unit/agents/tools/: __init__.py  test_customer_satisfaction.py  test_issues.py  test_master_data.py
tests/unit/repositories/: test_chat_repository.py  test_issue_repository.py  test_order_repository.py
